[gd_scene load_steps=39 format=3 uid="uid://bkjblgr1qthon"]

[ext_resource type="Script" uid="uid://bhryd3twfncfk" path="res://Player/Script/Player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://ch8c8t5mnjtfg" path="res://Player/Sprites/Idle.png" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://r2io0emj6ds3" path="res://Player/Sprites/Walk.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://c6dqcr7w3lupx" path="res://Player/Sprites/Run.png" id="3_hqtel"]
[ext_resource type="Script" uid="uid://da5td8gcrcr4r" path="res://Player/Script/Player_State_Machine.gd" id="5_k53q1"]
[ext_resource type="Script" uid="uid://520e5opjcnty" path="res://Player/Script/IdleState.gd" id="6_fhl08"]
[ext_resource type="Script" uid="uid://bkcqhhwrqqvdp" path="res://Player/Script/WalkState.gd" id="7_00tjw"]
[ext_resource type="Script" uid="uid://he6jhn30cndl" path="res://Player/Script/RunState.gd" id="8_x3vf3"]
[ext_resource type="Script" uid="uid://p33kml42n48l" path="res://Player/Script/JumpState.gd" id="9_apopc"]
[ext_resource type="Script" uid="uid://d0qtnnfgamcs0" path="res://Player/BoardedState.gd" id="10_x3vf3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_onrkg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_onrkg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_onrkg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_onrkg")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_onrkg")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("3_hqtel")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("3_hqtel")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("3_hqtel")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("3_hqtel")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("3_hqtel")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("3_hqtel")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("3_hqtel")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("3_hqtel")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("3_hqtel")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_i3pqv")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_i3pqv")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_i3pqv")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_i3pqv")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_i3pqv")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3pqv"]
radius = 6.0
height = 44.0

[node name="player" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_i3pqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -64)
sprite_frames = SubResource("SpriteFrames_i3pqv")
animation = &"idle"
autoplay = "idle"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -24)
shape = SubResource("CapsuleShape2D_i3pqv")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(10, -61)
current = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_k53q1")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("6_fhl08")

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("7_00tjw")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("8_x3vf3")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("9_apopc")

[node name="BoardedState" type="Node" parent="StateMachine"]
script = ExtResource("10_x3vf3")
